bag fix gap

--- a/src/pages/styles/Installation.module.css
+++ b/src/pages/styles/Installation.module.css
@@ -176,7 +176,6 @@
         display: grid;
         grid-template-columns: 320px 1fr;
         grid-template-rows: 77px 360px 160px 1fr;
-        gap: 0;
         grid-column-gap: 40px;
     }
 
